Fixed broken CSS.

--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,8 @@
 		-ms-transform: translate3d(0,0,0);
 		transform: translate3d(0,0,0);
 		/* Set your background with this */
-				background: #000 url("/css/images/IMG_20141119_135307.jpg ") bottom left;
-			
+				background: #000 url("../css/images/IMG_20141119_135307.jpg ") bottom left;
+
 		background-repeat: repeat;
 		height: 100%;
 		left: 0;
